--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "thorium.js",
   "dependencies": {
     "async": "^2.5.0",
-    "discord.js": "^12.0.0-dev"
+    "discord.js": ">=11.0.0-dev"
   },
   "devDependencies": {},
   "scripts": {
