--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "async": "^2.5.0",
     "curry": "^1.2.0",
-    "discord.js": ">=11.0.0-dev"
+    "discord.js": "^11.1.0",
+    "ramda": "^0.24.1",
+    "supervisor": "^0.12.0"
   },
   "devDependencies": {},
   "scripts": {
