--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "discord.js": "^11.1.0",
+    "opn": "^5.1.0",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {},
