--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "async": "^2.5.0",
     "discord.js": "^11.1.0",
     "opn": "^5.1.0",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
